--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,11 @@
 :root {
     --main-bg-color: #f1cc9d;
+    --main-txt-color: #333;
+    --typical-font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
+    font-family: var(--typical-font-family);
     background-color: var(--main-bg-color);
+    color: var(--main-txt-color);
 }
