--- a/css/app.css
+++ b/css/app.css
@@ -2,10 +2,18 @@
     --main-bg-color: #f1cc9d;
     --main-txt-color: #333;
     --typical-font-family: Arial, Helvetica, sans-serif;
+    --container-width: 70%;
 }
 
 body {
+    margin: 0;
+    padding: 0;
     font-family: var(--typical-font-family);
     background-color: var(--main-bg-color);
     color: var(--main-txt-color);
+}
+
+.container {
+    width: var(--container-width);
+    margin: 20px auto;
 }
