--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,8 @@
     --main-txt-color: #333;
     --typical-font-family: Arial, Helvetica, sans-serif;
     --container-width: 70%;
+    --main-head-bg-color: #333;
+    --main-head-text-color: white;
 }
 
 body {
@@ -16,4 +18,9 @@ body {
 .container {
     width: var(--container-width);
     margin: 20px auto;
+}
+
+.main-header {
+    background-color: var(--main-head-bg-color);
+    color: var(--main-head-text-color);
 }
